# Alepic

./: .gitignore  BUILD.md  CODE.md  Cargo.toml  README.md  TESTING.md
assets/images/src/: icon.xcf  notification-icon.xcf
contracts/: AlepicMain.ralph
docs/: alepic.txt  file-structure.txt
src/: app.rs  billboard.rs  content_filter.rs  main.rs  mode.rs  utils.rs
src/blockchain/: client.rs  contract.rs  fees.rs  manager.rs  mod.rs  transactions.rs  wallet.rs
src/canvas/: chunk.rs  mod.rs
src/game/: alepe.rs  mod.rs
src/rendering/: mod.rs  texture_mgr.rs
src/ui/: color_layer.rs  market_layer.rs  mod.rs
tests/: alepe_tests.rs  canvas_tests.rs  content_filter_tests.rs  fees_tests.rs
