[package]
name = "alepic"
version = "0.1.0"
edition = "2021"
description = "Alephium Collaborative Canvas - A decentralized pixel art platform"
license = "GPL-3.0"

[dependencies]
eframe = "0.24"
egui = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8"
keyring = "2.0"

[[test]]
name = "canvas_tests"
path = "tests/canvas_tests.rs"

[[test]]
name = "alepe_tests"
path = "tests/alepe_tests.rs"

[[test]]
name = "fees_tests"
path = "tests/fees_tests.rs"

[[test]]
name = "content_filter_tests"
path = "tests/content_filter_tests.rs"